Changes from Java 11 to Java 8.
My brother can't figure out how to upgrade his java... -_-