@@ -1,6 +1,7 @@
 package energy;
 
 import java.util.List;
+import java.util.Arrays;
 
 public class EnergyRefinementOption implements Option {
 	public static EnergyRefinementOption fire = new EnergyRefinementOption(EnergyType.FIRE);
@@ -8,7 +9,7 @@ public class EnergyRefinementOption implements Option {
 	public static EnergyRefinementOption earth = new EnergyRefinementOption(EnergyType.EARTH);
 	public static EnergyRefinementOption air = new EnergyRefinementOption(EnergyType.AIR);
 	
-	public static List<EnergyRefinementOption> all = List.of(water, earth, fire, air);
+	public static List<EnergyRefinementOption> all = Arrays.asList(water, earth, fire, air);
 	
 	private EnergyRefinementOption(EnergyType type) {
 		this.type = type;
